# AdventOfCode

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: format-and-lint.yml
2023/Day1/: day_1.py  test_day_1.py
2023/Day10/: day_10.py  test_day_10.py
2023/Day11/: day_11.py  test_day_11.py
2023/Day12/: day_12.py  test_day_12.py
2023/Day13/: day_13.py  test_day_13.py
2023/Day14/: day_14.py  test_day_14.py
2023/Day15/: day_15.py  test_day_15.py
2023/Day16/: day_16.py  test_day_16.py
2023/Day17/: day_17.py  test_day_17.py
2023/Day18/: day_18.py  test_day_18.py
2023/Day19/: day_19.py  test_day_19.py
2023/Day2/: day_2.py  test_day_2.py
2023/Day20/: day_20.py  test_day_20.py
2023/Day21/: day_21.py  test_day_21.py
2023/Day22/: day_22.py  test_day_22.py
2023/Day23/: day_23.py  test_day_23.py
2023/Day24/: day_24.py  test_day_24.py
2023/Day25/: day_25.py  test_day_25.py
2023/Day3/: day_3.py  test_day_3.py
2023/Day4/: day_4.py  test_day_4.py
2023/Day5/: day_5.py  test_day_5.py
2023/Day6/: day_6.py  test_day_6.py
2023/Day7/: day_7.py  test_day_7.py
2023/Day8/: day_8.py  test_day_8.py
2023/Day9/: day_9.py  test_day_9.py
